# 6502-Emulator

./: CMakeLists.txt  README.md  main_6502.cpp
6502Lib/: CMakeLists.txt
6502Lib/src/: main_6502.h
6502Lib/src/private/: m6502.cpp
6502Lib/src/public/: m6502.h  main_6502.h
6502Test/: CMakeLists.txt
6502Test/src/: 6502AND_EOR_ORA_Tests.cpp  6502AddWithCarryTests.cpp  6502Add_SubWithCarryTests.cpp  6502BranchTests.cpp  6502CompareRegistersTests.cpp  6502IncrementDecrementTests.cpp  6502JumpsAndCallsTests.cpp  6502LoadPrgTests.cpp  6502LoadRegisterTests.cpp  6502LogicalOpTests.cpp  6502ShiftsTests.cpp  6502StackOperationsTests.cpp  6502StatusFlagChangeTests.cpp  6502StoreRegisterTests.cpp  6502SystemFunctionsTests.cpp  6502Tests.cpp  6502TransferRegisterTests.cpp  main_6502.cpp
